--- a/chart/ibmcase-bluemix-service/templates/delete_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service/templates/delete_api_key_secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-delete-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
+  name: {{ (cat .Release.Name "-delete-api-key-" ( .Values.service.name | lower | replace " " "-") "-" ( randAlphaNum 5 | lower )) | nospace | trunc 63 }} 
   namespace: {{ .Release.Namespace }}
   labels:
-    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+    bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -16,9 +16,9 @@ metadata:
 spec:
   template:
     metadata:
-      name: {{.Release.Name}}-delete-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
+      name: {{.Release.Name}}-delete-api-key-secret-{{ .Values.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
       labels:
-        bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+        bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
         chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
@@ -28,5 +28,5 @@ spec:
       - name: delete-api-key-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key"]
+        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key"]
         imagePullPolicy: IfNotPresent
