--- a/chart/ibmcase-bluemix-service/templates/configmap.yaml
+++ b/chart/ibmcase-bluemix-service/templates/configmap.yaml
@@ -1,18 +1,18 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-target
+  name: {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-target
   namespace: {{ .Release.Namespace }}
   labels:
-    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+    bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 data:
-  bluemix-api-endpoint: {{ .Values.bluemix.target.endpoint }}
-  bluemix-org: {{ .Values.bluemix.target.org }}
-  bluemix-space: {{ .Values.bluemix.target.space }}
-  kube-cluster-name:  {{ .Values.bluemix.clusterName }}
-  bluemix-service-name:  {{ .Values.bluemix.service.name }}
-  bluemix-service-type:  {{ .Values.bluemix.service.type }}
-  bluemix-service-plan:  {{ .Values.bluemix.service.plan }}
+  bluemix-api-endpoint: {{ .Values.target.endpoint | quote }}
+  bluemix-org: {{ .Values.target.org | quote }}
+  bluemix-space: {{ .Values.target.space | quote }}
+  kube-cluster-name:  {{ .Values.clusterName | quote }}
+  bluemix-service-name:  {{ .Values.service.name | quote }}
+  bluemix-service-type:  {{ .Values.service.type | quote }}
+  bluemix-service-plan:  {{ .Values.service.plan | quote }}
