--- a/chart/ibmcase-bluemix-service/templates/create_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service/templates/create_api_key_secret.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-create-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
+  name: {{ (cat .Release.Name "-create-api-key-secret-" ( .Values.service.name | lower | replace " " "-") "-" ( randAlphaNum 5 | lower )) | nospace | trunc 63 }} 
   namespace: {{ .Release.Namespace }}
   labels:
-    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+    bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -16,9 +16,9 @@ metadata:
 spec:
   template:
     metadata:
-      name: {{.Release.Name}}-create-api-key-secret-{{ .Values.bluemix.service.name | lower | replace " " "-" }}
+      name: {{.Release.Name}}-create-api-key-secret-{{ .Values.service.name | lower | replace " " "-" }}
       labels:
-        bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+        bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
         chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -28,11 +28,11 @@ spec:
       - name: create-api-key-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} || \
-        kubectl create secret generic {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key --from-literal=api-key=${BLUEMIX_API_KEY} \
+        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} || \
+        kubectl create secret generic {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key --from-literal=api-key=${BLUEMIX_API_KEY} \
         --namespace {{ .Release.Namespace }}"]
         imagePullPolicy: IfNotPresent
         env:
         - name: BLUEMIX_API_KEY
-          value: {{ .Values.bluemix.apiKey }}
+          value: {{ .Values.apiKey }}
 
