--- a/chart/ibmcase-bluemix-service/templates/create_bluemix_service.yaml
+++ b/chart/ibmcase-bluemix-service/templates/create_bluemix_service.yaml
@@ -1,10 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{.Release.Name}}-create-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-{{ randAlphaNum 5 | lower }}
+  name: {{ (cat .Release.Name "-create-bluemix-service-" ( .Values.service.name | lower | replace " " "-") "-" ( randAlphaNum 5 | lower )) | nospace | trunc 63 }} 
   namespace: {{ .Release.Namespace }}
   labels:
-    bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+    bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -16,9 +16,9 @@ metadata:
 spec:
   template:
     metadata:
-      name: {{.Release.Name}}-create-bluemix-service-{{ .Values.bluemix.service.name | lower | replace " " "-" }}
+      name: {{.Release.Name}}-create-bluemix-service-{{ .Values.service.name | lower | replace " " "-" }}
       labels:
-        bluemixService: {{ .Values.bluemix.service.name | lower | replace " " "-" }}
+        bluemixService: {{ .Values.service.name | lower | replace " " "-" }}
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
         chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -31,17 +31,17 @@ spec:
         args: 
         - >
           source /scripts/bx_login.sh; 
-          bx service list | grep {{ .type }} | grep '^{{ .name }} ' || bx service create {{ .Values.bluemix.service.type }} {{ .Values.bluemix.service.plan }} {{ .Values.bluemix.service.name }};
+          bx service list | grep '{{ .Values.service.type }}' | grep '^{{ .Values.service.name }} ' || bx service create {{ .Values.service.type }} {{ .Values.service.plan }} {{ .Values.service.name }};
         imagePullPolicy: IfNotPresent
         env:
         - name: BX_ORG
-          value: {{ .Values.bluemix.target.org }}
+          value: {{ .Values.target.org }}
         - name: BX_SPACE
-          value: {{ .Values.bluemix.target.space }}
+          value: {{ .Values.target.space }}
         - name: BX_API_ENDPOINT
-          value: {{ .Values.bluemix.target.endpoint }}
+          value: {{ .Values.target.endpoint }}
         - name: BLUEMIX_API_KEY
           valueFrom:
             secretKeyRef:
-              name: {{ .Release.Name }}-{{ .Values.bluemix.service.name | lower | replace " " "-" }}-bluemix-api-key
+              name: {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key
               key: api-key
