ibmcase-couchdb chart update

--- a/chart/ibmcase-bluemix-service.bak/templates/create_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service.bak/templates/create_api_key_secret.yaml
@@ -34,5 +34,5 @@ spec:
         imagePullPolicy: IfNotPresent
         env:
         - name: BLUEMIX_API_KEY
-          value: {{ .Values.apiKey }}
+          value: {{ template "bluemixApiKey" . }}
 
