--- a/chart/ibmcase-bluemix-service.bak/templates/delete_api_key_secret.yaml
+++ b/chart/ibmcase-bluemix-service.bak/templates/delete_api_key_secret.yaml
@@ -28,5 +28,5 @@ spec:
       - name: delete-api-key-secret
         image: ibmcase/kubectl:latest
         command: [ "/bin/bash", "-c" ]
-        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key"]
+        args: ["kubectl get secrets {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key --namespace {{ .Release.Namespace }} && kubectl --namespace {{ .Release.Namespace }} delete secret {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key; exit 0"]
         imagePullPolicy: IfNotPresent
