--- a/chart/ibmcase-couchdb/templates/service.yaml
+++ b/chart/ibmcase-couchdb/templates/service.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
 {{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -16,4 +16,4 @@ spec:
   selector:
 {{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
