--- a/chart/customer/templates/pre_a_create_user.yaml
+++ b/chart/customer/templates/pre_a_create_user.yaml
@@ -1,11 +1,10 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: "{{.Chart.Name}}-create-user-{{.Release.Name}}-{{ randAlphaNum 5 | lower }}"
+  name: {{ cat .Release.Name "-" .Chart.Name "-create-user-" (randAlphaNum 5 | lower) | nospace | trunc 63 }}
   labels:
     app: bluecompute
     micro: customer
-    tier: backend
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
@@ -17,14 +16,22 @@ metadata:
 spec:
   template:
     metadata:
-      name: "{{.Chart.Name}}-create-user-{{.Release.Name}}-{{ randAlphaNum 5 | lower }}"
+      name: {{ cat .Release.Name "-" .Chart.Name "-create-user-" (randAlphaNum 5 | lower) | nospace }}
       labels:
         app: bluecompute
         micro: customer
-        tier: backend
         heritage: {{.Release.Service | quote }}
         release: {{.Release.Name | quote }}
         chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+      annotations:
+        pod.beta.kubernetes.io/init-containers: '[
+          {
+             "name": "bluecompute-customer-wait-for-customer-service",
+             "image": "ellerbrock/alpine-bash-curl-ssl",
+             "imagePullPolicy": "IfNotPresent",
+             "command": ["/bin/bash", "-c", "until curl --max-time 1 http://{{ .Values.service.name }}:{{ .Values.service.externalPort }}; do echo waiting for customer-service; sleep 1; done;"]
+          }
+        ]'
     spec:
       restartPolicy: Never
       containers:
@@ -39,7 +46,9 @@ spec:
             jwt3=`echo -n "${jwt1}.${jwt2}" | tr '+\/' '-_' | tr -d '=' | tr -d '\r\n'`;
             jwt4=`echo -n "${jwt3}" | openssl dgst -binary -sha256 -hmac "${secret}" | openssl enc -base64 | tr '+\/' '-_' | tr -d '=' | tr -d '\r\n'`;
             jwt=`echo -n "${jwt3}.${jwt4}"`;
-            curl -H "Content-type: application/json" -H "Authorization: Bearer ${jwt}" -X POST -d '{"username": "user", "password": "passw0rd", "firstName": "user", "lastName": "name", "email": "user@name.com"}' http://customer-service:8080/micro/customer
+            for i in `seq 1 120`; do
+              curl --max-time 5 -H "Content-type: application/json" -H "Authorization: Bearer ${jwt}" -X POST -d '{"username": "user", "password": "passw0rd", "firstName": "user", "lastName": "name", "email": "user@name.com"}' http://customer-service:8080/micro/customer;
+            done
         imagePullPolicy: IfNotPresent
         volumeMounts:
         - mountPath: /var/run/secrets/hs256-key
@@ -48,4 +57,4 @@ spec:
       - name: hs256-key
         secret:
           defaultMode: 420
-          secretName: "{{ .Values.hs256key.secretName }}"
+          secretName: {{ template "hs256SecretName" . }}
