--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -1,14 +1,12 @@
 # Default values for micro-customer.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
-replicaCount: 2
+replicaCount: 1
 
 image:
   repository: ibmcase/bluecompute-customer
-  tag: latest
+  tag: dev
   pullPolicy: IfNotPresent
-  pullSecret:
-  pullSecretName: customer-image-pull-secret
 
 service:
   name: customer-service
@@ -16,32 +14,71 @@ service:
   externalPort: 8080
   internalPort: 8080
 
-cloudant:
-  skipDelete: false
-  serviceName: refarch-cloudantdb
-  servicePlan: Lite
+global:
+  hs256key:
+    secret:
+    secretName:
+
+  bluemix:
+    apiKey:
+  
+    target:
+      endpoint: api.ng.bluemix.net
+      org:
+      space:
+  
+    clusterName:
+
+tags:
+  bluemix: false
+  localdb: false
 
 hs256key:
-  skipDelete: false
+  skipDelete: true
   secretName: hs256-key
+  secret:
 
 resources:
   limits:
-    cpu: 100m
     memory: 128Mi
   requests:
-    cpu: 100m
-    memory: 128Mi
+    memory: 64Mi
 
-configMap:
-  skipDelete: false
-  bluemixAPIEndpoint: api.ng.bluemix.net
-  bluemixOrg: PUT_YOUR_BLUEMIX_ORG_HERE
-  bluemixSpace: PUT_YOUR_BLUEMIX_SPACE_HERE
-  bluemixRegistry: registry.ng.bluemix.net
-  bluemixRegistryNamespace: PUT_YOUR_BLUEMIX_REGISTRY_NAMESPACE_HERE
-  kubeClusterName: PUT_YOUR_CLUSTER_NAME_HERE
+bluemix-cloudantdb:
+  apiKey:
 
-secret:
-  skipDelete: false
-  apiKey: PUT_YOUR_API_KEY_HERE
+  target:
+    endpoint: api.ng.bluemix.net
+    org:
+    space:
+
+  clusterName:
+  
+  service:
+    name: customer-cloudantdb
+    type: cloudantNoSQLDB
+    plan: Lite
+  
+ibmcase-couchdb:
+  user:
+  password:
+  service:
+    name: customer-couchdb
+    type: ClusterIP
+    externalPort: 5984
+    internalPort: 5984
+  binding:
+    name: binding-customer-couchdb
+  resources:
+    limits:
+      memory: 128Mi
+    requests:
+      memory: 64Mi
+  existingPVCName:
+  labels:
+    app: bluecompute
+    micro: customer
+    tier: data
+  nodename: customerdb
+  
+
