--- a/chart/ibmcase-bluemix-service.bak/templates/cleanup_jobs.yaml
+++ b/chart/ibmcase-bluemix-service.bak/templates/cleanup_jobs.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": post-delete
+    "helm.sh/hook": pre-install,post-install,post-upgrade,post-delete
     "helm.sh/hook-weight": "999"
 spec:
   template:
