--- a/chart/ibmcase-bluemix-service.bak/templates/unbind_bluemix_service.yaml
+++ b/chart/ibmcase-bluemix-service.bak/templates/unbind_bluemix_service.yaml
@@ -11,7 +11,7 @@ metadata:
   annotations:
     # This is what defines this resource as a hook. Without this line, the
     # job is considered part of the release.
-    "helm.sh/hook": pre-delete
+    "helm.sh/hook": post-delete
     "helm.sh/hook-weight": "34"
 spec:
   template:
@@ -44,5 +44,5 @@ spec:
         - name: BLUEMIX_API_KEY
           valueFrom:
             secretKeyRef:
-              name: {{ template "bluemixApiKeySecretName" . }} 
+              name: {{ .Release.Name }}-{{ .Values.service.name | lower | replace " " "-" }}-bluemix-api-key
               key: api-key
