- Added label fields to couchdb chart - Simplified check for global variables in customer chart - Edited .gitignore to ignore build files and .idea folder

--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,9 @@
 
 /.settings
 /.classpath
-/docker/app.jar
+docker/app.jar
 .*.swp
+.idea
 
 chart/customer/charts
 chart/customer/requirements.lock
