--- a/chart/customer/templates/pre_a_create_user.yaml
+++ b/chart/customer/templates/pre_a_create_user.yaml
@@ -7,12 +7,7 @@ metadata:
     micro: customer
     heritage: {{.Release.Service | quote }}
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
-  annotations:
-    # This is what defines this resource as a hook. Without this line, the
-    # job is considered part of the release.
-    "helm.sh/hook": post-install
-    "helm.sh/hook-weight": "30"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 spec:
   template:
     metadata:
@@ -29,7 +24,7 @@ spec:
              "name": "bluecompute-customer-wait-for-customer-service",
              "image": "ellerbrock/alpine-bash-curl-ssl",
              "imagePullPolicy": "IfNotPresent",
-             "command": ["/bin/bash", "-c", "until curl --max-time 1 http://{{ .Values.service.name }}:{{ .Values.service.externalPort }}; do echo waiting for customer-service; sleep 1; done;"]
+             "command": ["/bin/bash", "-c", "until curl --max-time 1 http://{{ .Release.Name }}-{{ .Values.service.name }}:{{ .Values.service.externalPort }}; do echo waiting for customer-service; sleep 1; done;"]
           }
         ]'
     spec:
@@ -47,7 +42,7 @@ spec:
             jwt4=`echo -n "${jwt3}" | openssl dgst -binary -sha256 -hmac "${secret}" | openssl enc -base64 | tr '+\/' '-_' | tr -d '=' | tr -d '\r\n'`;
             jwt=`echo -n "${jwt3}.${jwt4}"`;
             for i in `seq 1 120`; do
-              curl --max-time 5 -H "Content-type: application/json" -H "Authorization: Bearer ${jwt}" -X POST -d '{"username": "user", "password": "passw0rd", "firstName": "user", "lastName": "name", "email": "user@name.com"}' http://customer-service:8080/micro/customer;
+              curl --max-time 5 -H "Content-type: application/json" -H "Authorization: Bearer ${jwt}" -X POST -d '{"username": "user", "password": "passw0rd", "firstName": "user", "lastName": "name", "email": "user@name.com"}' http://{{ .Release.Name }}-{{ .Values.service.name }}:{{ .Values.service.externalPort }}/micro/customer;
             done
         imagePullPolicy: IfNotPresent
         volumeMounts:
