--- a/chart/customer/templates/service.yaml
+++ b/chart/customer/templates/service.yaml
@@ -1,23 +1,21 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: customer-service
+  name: {{ .Release.Name }}-{{ .Values.service.name }}
   labels:
     app: bluecompute
     micro: customer
     tier: backend
     release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
 spec:
   type: {{ .Values.service.type }}
   ports:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: {{ .Values.service.name }}
+    name: http
   selector:
     app: bluecompute
     micro: customer
     tier: backend
-    release: {{.Release.Name | quote }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
