--- a/chart/ibmcase-couchdb/templates/service.yaml
+++ b/chart/ibmcase-couchdb/templates/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.name }}
+  name: {{ .Release.Name }}-{{ .Values.service.name }}
   labels:
 {{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
@@ -12,7 +12,7 @@ spec:
   - port: {{ .Values.service.externalPort }}
     targetPort: {{ .Values.service.internalPort }}
     protocol: TCP
-    name: {{ .Values.service.name }}
+    name: http
   selector:
 {{ toYaml .Values.labels | indent 4 }}
     release: {{.Release.Name | quote }}
