--- a/chart/ibmcase-bluemix-service/Chart.yaml
+++ b/chart/ibmcase-bluemix-service/Chart.yaml
@@ -2,3 +2,4 @@ apiVersion: v1
 description: Deploy a service in Bluemix and bind to my cluster
 name: ibmcase-bluemix-service
 version: 0.1.0
+icon: http://www-05.ibm.com/il/gtu/img/BluemixLogo_172x203.png
