--- a/chart/ibmcase-couchdb/Chart.yaml
+++ b/chart/ibmcase-couchdb/Chart.yaml
@@ -1,4 +1,5 @@
 apiVersion: v1
-description: A Helm chart for Kubernetes
+description: CouchDB
 name: ibmcase-couchdb
 version: 0.1.0
+icon: http://couchdb.apache.org/image/couch@2x.png
