--- a/chart/customer/templates/pre_a_create_user.yaml
+++ b/chart/customer/templates/pre_a_create_user.yaml
@@ -22,7 +22,7 @@ spec:
         pod.beta.kubernetes.io/init-containers: '[
           {
              "name": "bluecompute-customer-wait-for-customer-service",
-             "image": "ellerbrock/alpine-bash-curl-ssl",
+             "image": "{{ template bashCurlSSLDockerImage . }}:{{ .Values.bash.image.tag }}",
              "imagePullPolicy": "IfNotPresent",
              "command": ["/bin/bash", "-c", "until curl --max-time 1 http://{{ .Release.Name }}-{{ .Values.service.name }}:{{ .Values.service.externalPort }}; do echo waiting for customer-service; sleep 1; done;"]
           }
@@ -31,9 +31,9 @@ spec:
       restartPolicy: Never
       containers:
       - name: create-user
-        image: ellerbrock/alpine-bash-curl-ssl
+        image: {{ template bashCurlSSLDockerImage . }}:{{ .Values.bash.image.tag }}
         command: ["/bin/bash", "-c" ]
-        args: 
+        args:
         - >
             secret=`cat /var/run/secrets/hs256-key/key`;
             jwt1=`echo -n '{"alg":"HS256","typ":"JWT"}' | openssl enc -base64`;
