--- a/chart/customer/templates/deployment.yaml
+++ b/chart/customer/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         pod.beta.kubernetes.io/init-containers: '[
           {
             "name": "test-couchdb",
-            "image": "{{ template dataLoaderDockerImage . }}:{{ .Values.dataloader.image.tag }}",
+            "image": "{{ .Values.dataloader.image.repository }}:{{ .Values.dataloader.image.tag }}",
             "imagePullPolicy": "IfNotPresent",
             "command": ["/bin/bash", "-c"],
             "args": ["couchdb_uri=`echo ${couchdb} | jq .url -r`; until curl --max-time 1 ${couchdb_uri}; do echo waiting for couchdb; /bin/sleep 1; done;"],
