--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,24 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.oidc</artifactId>
+            <version>1.0.16</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.oauth</artifactId>
+            <version>1.2.16</version>
+            <scope>provided</scope>
+        </dependency>
+         <dependency>
+            <groupId>com.ibm.websphere.appserver.api</groupId>
+            <artifactId>com.ibm.websphere.appserver.api.jwt</artifactId>
+            <version>1.0.16</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
