--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -10,20 +10,14 @@ image:
     requests:
       cpu: 200m
       memory: 300Mi
+
 service:
-  name: Node
+  name: customer
+  cloudantservicename: cloudant-service
   type: NodePort
   servicePort: 9080
   servicePortHttps: 9443
-hpa:
-  enabled: false
-  minReplicas: 1
-  maxReplicas: 2
-  metrics:
-    cpu:
-      targetAverageUtilization: 70
-    memory:
-      targetAverageUtilization: 70
+
 services:
 base:
   enabled: false
@@ -31,6 +25,16 @@ base:
   image:
     tag : v0.9.9
   weight: 100
-istio:
-  enabled: false
-  weight: 100
+
+jwt:
+  id: myMpJwt
+  uri: https://auth-service:9443/oidc/endpoint/OP/jwk
+  issuer: https://auth-service:9443/oidc/endpoint/OP
+
+cloudant:
+  user: admin
+  password: pass
+  protocol: http
+  host: localhost
+  port: 8081
+  database: customers
