--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -38,12 +38,10 @@ spec:
 
     spec:
       containers:
-
       # Liberty Server Container
-      - name: customer
-        image: customer:v1.0.0
-        imagePullPolicy: IfNotPresent
-        port: 9443
+      - name: "{{ .Chart.Name }}"
+        image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        imagePullPolicy: {{ .Values.image.imagePullPolicy }}
         readinessProbe:
           httpGet:
             path: /customer/rest/health
@@ -60,13 +58,15 @@ spec:
             value: "{{ .Values.service.servicePort }}"
           - name: APPLICATION_NAME
             value: "{{ .Release.Name }}"
-          - name: jwt.id
-            value: {{ .Values.jwt.id }}
-          - name: jwksUri
-            value: {{ .Values.jwt.uri }}
-          - name: jwksIssuer
-            value: {{ .Values.jwt.issuer}}
         resources:
           requests:
             cpu: "{{ .Values.image.resources.requests.cpu }}"
             memory: "{{ .Values.image.resources.requests.memory }}"
+        volumeMounts:
+        - name: keystorevol
+          mountPath: "/etc/keystorevol"
+          readOnly: true
+      volumes:
+      - name: keystorevol
+        secret:
+          secretName: keystoresecret
