Auto populating of DB

--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -53,6 +53,7 @@ spec:
       - name: cloudant
         image: ibmcom/cloudant-developer
         imagePullPolicy: IfNotPresent
+        command: ['/bin/bash', '-c', 'python populate.py']
         env:
           - name: CLOUDANT_ROOT_PASSWORD
             value: {{ .Values.cloudant.password }}
@@ -60,6 +61,7 @@ spec:
         - name: cloudant-pv
           mountPath: /var/lib/cloudant
       volumes:
+      - /my/own/datadir:/data/db
       - name: cloudant-pv
         persistentVolumeClaim:
           claimName: cloudant-pv-claim
