Default cloudant population now working

--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -8,6 +8,7 @@ spec:
   type: {{ .Values.service.type }}
   ports:
     - port: {{ .Values.cloudant.port }}
+      nodePort: 31222
   selector:
     micro: customer
     service: cloudant-db
@@ -45,31 +46,102 @@ spec:
         micro: customer
         service: cloudant-db
         tier: backend
-    annotations:
-        pod.beta.kubernetes.io/init-containers: '[
-          {
-            "name": "cloudant",
-            "image": "cloudant",
-            "volume": "cloudant",
-            "command": ["/bin/bash", "-c"],
-            "args": ["python /tmp/populate.py"]
-          }
-        ]'
+
     spec:
       containers:
 
       # Container for Cloudant
       - name: cloudant
-        image: cloudant
+        image: ibmcom/cloudant-developer
         imagePullPolicy: IfNotPresent
+        ports:
+            - containerPort: 80
         env:
           - name: CLOUDANT_ROOT_PASSWORD
             value: {{ .Values.cloudant.password }}
         volumeMounts:
-        - name: cloudant
+        - name: cloudant-pv
           mountPath: /var/lib/cloudant
       volumes:
-      - name: cloudant
+      - name: cloudant-pv
         persistentVolumeClaim:
-          claimName: cloudant-pv-claim
+claimName: cloudant-pv-claim
+# apiVersion: v1
+# kind: Service
+# metadata:
+#   name: {{ .Values.service.cloudantservicename }}
+#   labels:
+#     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+# spec:
+#   type: {{ .Values.service.type }}
+#   ports:
+#     - protocol: TCP
+#       port: {{ .Values.cloudant.port }}
+#       nodePort: 31222
+#   selector:
+#     micro: customer
+#     service: cloudant-db
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: cloudant-pv-claim
+#   labels:
+#     app: bluecompute
+#     tier: backend
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   resources:
+#     requests:
+#       storage: 20Gi
+# ---
+# apiVersion: extensions/v1beta1
+# kind: Deployment
+# metadata:
+#   name: cloudant-deployment
+#   labels:
+#     app: bluecompute
+#     micro: customer
+#     service: cloudant-db
+#     tier: backend
+#     chart: '{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}'
+# spec:
+#   replicas: {{ .Values.replicaCount }}
+#   template:
+#     metadata:
+#       labels:
+#         app: bluecompute
+#         micro: customer
+#         service: cloudant-db
+#         tier: backend
+#     spec:
+#       containers:
+#
+#       # Container for Cloudant
+#       - name: cloudant
+#         image: ibmcom/cloudant-developer
+#         imagePullPolicy: IfNotPresent
+#         env:
+#           - name: CLOUDANT_ROOT_PASSWORD
+#             value: {{ .Values.cloudant.password }}
+#         volumeMounts:
+#         - name: cloudant-pv
+#           mountPath: /var/lib/cloudant
+#       volumes:
+#       - name: cloudant-pv
+#         persistentVolumeClaim:
+#           claimName: cloudant-pv-claim
 ---
+apiVersion: batch/v1
+kind: Job
+metadata:
+  name: populate
+spec:
+  template:
+    spec:
+      containers:
+      - name: populate-db
+        image: populate
+        imagePullPolicy: IfNotPresent
+        command: ["/bin/sh", "-c", "python3 /tmp/populate.py"]
+      restartPolicy: Never
