Adding pvc storage

--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -12,6 +12,7 @@ spec:
     micro: customer
     service: cloudant-db
 ---
+{{- if and .Values.persistence.enabled (not .Values.persistence.existingClaim) }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -25,6 +26,14 @@ spec:
   resources:
     requests:
       storage: 20Gi
+{{- if .Values.persistence.storageClass }}
+{{- if (eq "-" .Values.persistence.storageClass) }}
+  storageClassName: ""
+{{- else }}
+  storageClassName: "{{ .Values.persistence.storageClass }}"
+{{- end }}
+{{- end }}
+{{- end }}
 ---
 apiVersion: extensions/v1beta1
 kind: Deployment
