--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -44,13 +44,16 @@ spec:
         imagePullPolicy: {{ .Values.image.imagePullPolicy }}
         readinessProbe:
           httpGet:
-            path: /customer/rest/health
-            port: 9080
-          initialDelaySeconds: 30
+            path: /
+            port: 9443
+            scheme: HTTPS
+          initialDelaySeconds: 60
+          timeoutSeconds: 60
         livenessProbe:
           httpGet:
-            path: /customer/rest/customer/
-            port: 9080
+            path: /
+            port: 9443
+            scheme: HTTPS
           initialDelaySeconds: 1500
           timeoutSeconds: 500
         env:
