- Added ingress capability - Also renamed dependencies for better compatibility - Also renamed ibmcase-couchdb to customercouchdb for better helm compatibility - Also renamed ibmcase-bluemix-service to bluemixservice for better helm compatibility

--- a/chart/bluemixservice/templates/unbind_bluemix_service.yaml
+++ b/chart/bluemixservice/templates/unbind_bluemix_service.yaml
@@ -33,7 +33,7 @@ spec:
           source /scripts/bx_login.sh; 
           bx cs init; 
           bx cs cluster-services {{ template "bluemixClusterName" . }} -n {{ .Release.Namespace }} -s | grep '{{ .Values.service.name }}' && bx cs cluster-service-unbind {{ template "bluemixClusterName" . }} {{ .Release.Namespace }} "{{ .Values.service.name }}"
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         env:
         - name: BX_ORG
           value: {{ template "bluemixOrg" . }}
