--- a/chart/bluemixservice/Chart.yaml
+++ b/chart/bluemixservice/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 description: Deploy a service in Bluemix and bind to my cluster
-name: ibmcase-bluemix-service
-version: 0.2.0
+name: bluemixservice
+version: 0.4.0
 icon: http://www-05.ibm.com/il/gtu/img/BluemixLogo_172x203.png
