--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -14,6 +14,17 @@ service:
   externalPort: 8080
   internalPort: 8080
 
+ingress:
+  enabled: true
+  hostname: customer.bluecompute.com
+  path: /micro/customer
+
+tls:
+  enabled: false
+  secretName:
+  crt: ENTER_BASE64_ENCODED_CERTIFICATE
+  key: ENTER_BASE64_ENCODED_KEY
+
 global:
   hs256key:
     secret:
@@ -54,6 +65,6 @@ bash:
     repository: ibmcase/bluecompute-bash-curl-ssl
     tag: latest
 
-couchdb:
+customercouchdb:
   binding:
     name: binding-customer-couchdb
