--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -3,7 +3,9 @@
 replicaCount: 1
 revisionHistoryLimit: 1
 image:
-  repository: ibmcase/customer-mp
+  #repository: registry.csplab.cloudns.cx/microprofile/customer-mp
+  repository: customer-mp
+  #repository: ibmcase/customer-mp
   tag: v1.0.0
   pullPolicy: IfNotPresent
   resources:
