--- a/chart/customer/values.yaml
+++ b/chart/customer/values.yaml
@@ -48,7 +48,7 @@ cloudant:
 
 ## Persist data to a persistent volume
 persistence:
-  enabled: true
+  enabled: false
   ## database data Persistent Volume Storage Class
   ## If defined, storageClassName: <storageClass>
   ## If set to "-", storageClassName: "", which disables dynamic provisioning
@@ -56,5 +56,5 @@ persistence:
   ##   set, choosing the default provisioner.  (gp2 on AWS, standard on
   ##   GKE, AWS & OpenStack)
   ##
-  #storageClass: "glusterfs"
+  #storageClass: "-"
   accessMode: ReadWriteOnce
