The API is now using MP-Rest Client

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -7,3 +7,4 @@ user=admin
 password=pass
 
 database=customers
+application.rest.client.CloudantClientService/mp-rest/url=http://cloudant-service:80
