--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -55,7 +55,7 @@ spec:
           timeoutSeconds: 60
         livenessProbe:
           httpGet:
-            path: /
+            path: /health
             port: 9443
             scheme: HTTPS
           initialDelaySeconds: 1500
