mp health check

--- a/src/main/resources/META-INF/microprofile-config.properties
+++ b/src/main/resources/META-INF/microprofile-config.properties
@@ -8,3 +8,6 @@ password=pass
 
 database=customers
 application.rest.client.CloudantClientService/mp-rest/url=http://cloudant-service:80
+
+#Auth
+auth_health=https://auth-service:9443/health
