--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ .Chart.Name }}-service"
+  name: "{{ .Release.Name }}-{{ .Values.service.name }}"
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    chart: "{{ .Release.Name }}-{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     implementation: microprofile
 spec:
   type: {{ .Values.service.type }}
@@ -21,7 +21,7 @@ spec:
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
-  name: "{{ .Chart.Name }}-deployment"
+  name: "{{ .Release.Name }}-{{ .Values.service.name }}"
   labels:
     app: bluecompute
     micro: customer
