--- a/chart/customer/templates/cloudant-db.yaml
+++ b/chart/customer/templates/cloudant-db.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Values.service.cloudantservicename }}
+  name: {{ .Release.Name }}-{{ .Values.service.cloudantservicename }}
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
     implementation: microprofile
@@ -92,5 +92,5 @@ spec:
       - name: populate-db
         image: "{{ .Values.cloudant.image }}"
         imagePullPolicy: IfNotPresent
-        command: ["/bin/sh", "-c", "python3 /tmp/populate.py"]
+        command: ["/bin/sh", "-c", "python3 /tmp/populate.py {{ .Release.Name }}-{{ .Values.service.cloudantservicename }} {{ .Values.cloudant.port }}"]
       restartPolicy: Never
