--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -61,6 +61,10 @@ spec:
           initialDelaySeconds: 1500
           timeoutSeconds: 500
         env:
+          - name: host
+            value: "{{ .Release.Name }}-{{ .Values.service.cloudantservicename }}"
+          - name: auth_health
+            value: "{{ .Release.Name }}-{{ .Values.service.auth }}"
           - name: PORT
             value: "{{ .Values.service.servicePort }}"
           - name: APPLICATION_NAME
@@ -73,7 +77,12 @@ spec:
         - name: keystorevol
           mountPath: "/etc/keystorevol"
           readOnly: true
+        - name: config-volume
+          mountPath: /opt/ibm/wlp/usr/shared
       volumes:
       - name: keystorevol
         secret:
           secretName: keystoresecret
+      - name: config-volume
+        configMap:
+          name: {{ .Release.Name }}-{{ .Chart.Name }}-config
