--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,9 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+        <jwt.id>myMpJwt</jwt.id>
+        <jwksUri>https://auth:9443/oidc/endpoint/OP/jwk</jwksUri>
+        <jwksIssuer>https://auth:9443/oidc/endpoint/OP</jwksIssuer>
 
         <app.name>customer</app.name>
         <testServerHttpPort>9080</testServerHttpPort>
