--- a/chart/customer/templates/server.yaml
+++ b/chart/customer/templates/server.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    debliberty: "true"
+    bluecompute: "true"
   name: "{{ .Release.Name }}-{{ .Values.service.name }}"
   labels:
     chart: "{{ .Release.Name }}-{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
